  * New extratabs plugin from Adullact.
  * New globalsearch plugin allowing to publish lists of projects for
    other forges and to search for projects in remote forges.
  * New projectlabels plugin from Adullact.
  * Packaging-related files are now stored in
    gforge/packaging/{dirs,install,cron.d,control}/* rather than the
    previous gforge/{dirs,install,cron.d,control}/*.

 -- Roland Mas <lolando@debian.org>  Wed, 29 Apr 2009 15:21:31 +0200
  
gforge (4.8~rc1-2) experimental; urgency=low

  * New upstream snapshot.
  * install-chroot.sh: do not fail if device nodes can't be created (such
    as when operating in a vserver).
  * Fixed crontab syntax for -db-postgresql (cron doesn't interpolate the
    user column itself).

 -- Roland Mas <lolando@debian.org>  Mon, 04 May 2009 22:16:11 +0200

gforge (4.8~rc1-1) experimental; urgency=low

  [ Christian Bayle ]
  * Removed all files from /usr/lib/gforge and put them in /usr/share/gforge
  * cron scripts ar now in /usr/share/gforge/cronjobs
  * Now generate *.cron.d *.dirs *.install from cron.d/dirs/install dirs
  * Use dh_install instead of copy in rules

  [ Roland Mas ]
  * Fixed a bunch of lintian warnings.
  * Added logrotate configuration file for vhosts access logs.
  * New upstream release candidate.

 -- Roland Mas <lolando@debian.org>  Tue, 28 Apr 2009 15:33:18 +0200

gforge (4.7.2-9) unstable; urgency=low

  * gforge-plugin-scmsvn: For some reason the code setting up the inetd
    was missing.  Re-added it.
  * Fixed email sending in forums.

 -- Roland Mas <lolando@debian.org>  Tue, 12 May 2009 13:30:37 +0200

gforge (4.7.2-8) unstable; urgency=low

  * Added watch file.
  * Fixed copyright file to mention FusionForge.
  * Fixed group join request only sending a notification email to one of
    the project admins.

 -- Roland Mas <lolando@debian.org>  Mon, 04 May 2009 22:22:14 +0200

gforge (4.7.2-7) unstable; urgency=low

  * Added Debconf template translations for Spanish (closes: #519066).