@@ -31,12 +31,12 @@ if (isset($group_id) && is_numeric($group_id) && $group_id) {
 	//	for foundry and project summary pages
 	//
 	//
-	if ( $GLOBALS['sys_urlprefix'] != '' ) {
-		$pathwithoutprefix=ereg_replace($GLOBALS['sys_urlprefix'],'',getStringFromServer('REQUEST_URI'));
-	} else {
-		$pathwithoutprefix=getStringFromServer('REQUEST_URI');
+	$pos = strpos (getStringFromServer('REQUEST_URI'),
+		       normalized_urlprefix ());
+	if (($pos !== false) && ($pos == 0)) {
+		$pathwithoutprefix = substr (getStringFromServer('REQUEST_URI'),
+					     strlen (normalized_urlprefix ()) - 1);
 	}
-	//$expl_pathinfo = explode('/',getStringFromServer('REQUEST_URI'));
 	$expl_pathinfo = explode('/',$pathwithoutprefix);
 	if (($expl_pathinfo[1]=='foundry') || ($expl_pathinfo[1]=='projects')) {
 		$res_grp=db_query("
